--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2018"
 [dependencies]
 libloading = "0.5.2"
 glob = "0.3.0"
-libc = "0.2.62"
 xdg = "2.2.0"
+log = "0.4.8"
+env_logger = "0.7.0"
